--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -341,25 +341,58 @@
   box-shadow: var(--color-shadow-light);
   padding: 3rem;
   margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
 
   &__text {
+    z-index: 1;
+    position: relative;
   }
 
   &__user {
+    display: flex;
+    margin-top: 1.5rem;
+    justify-content: space-between;
+    align-items: center;
   }
 
   &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
   }
 
   &__user-box {
+    margin-right: auto;
   }
 
   &__user-name {
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    margin-bottom: 0.4rem;
   }
 
   &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-2);
   }
 
   &__rating {
+    color: var(--color-primary);
+    font-size: 2.2rem;
+    font-weight: 300;
+  }
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+    z-index: 1;
   }
 }
