--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,49 @@ body {
     font-family: sans-serif;
     z-index: 1; }
 
+.cta {
+  background-color: #fff;
+  box-shadow: var(--color-shadow-light);
+  margin-top: 3rem;
+  padding: 3.5rem 0;
+  text-align: center;
+  flex: 0 0 100%; }
+  .cta__book-now {
+    font-size: 1.2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem; }
+
+.btn {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: #fff; }
+  .btn__visible {
+    display: inline-block;
+    padding: 2rem 7.5rem;
+    width: 100%;
+    transition: all 0.2s; }
+  .btn__invisible {
+    display: inline-block;
+    position: absolute;
+    padding: 2rem 0;
+    height: 100%;
+    width: 100%;
+    top: -100%;
+    left: 0;
+    transition: all 0.2s; }
+  .btn:hover .btn__visible {
+    transform: translateY(100%); }
+  .btn:hover .btn__invisible {
+    top: 0; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -369,6 +412,7 @@ body {
 .detail {
   font-size: 1.4rem;
   display: flex;
+  flex-wrap: wrap;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line); }
