--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -396,3 +396,62 @@
     z-index: 1;
   }
 }
+
+.cta {
+  background-color: #fff;
+  box-shadow: var(--color-shadow-light);
+  margin-top: 3rem;
+  padding: 3.5rem 0;
+  text-align: center;
+  flex: 0 0 100%;
+
+  &__book-now {
+    font-size: 1.2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+  }
+}
+
+.btn {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(
+    to right,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
+  color: #fff;
+
+  &__visible {
+    display: inline-block;
+    padding: 2rem 7.5rem;
+    width: 100%;
+    transition: all 0.2s;
+  }
+
+  &__invisible {
+    display: inline-block;
+    position: absolute;
+    padding: 2rem 0;
+    height: 100%;
+    width: 100%;
+    top: -100%;
+    left: 0;
+    transition: all 0.2s;
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+}
