--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -36,6 +36,7 @@
 .detail {
   font-size: 1.4rem;
   display: flex;
+  flex-wrap: wrap;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
